--- a/gitPractice.html
+++ b/gitPractice.html
@@ -6,5 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p> 
+        Loyality Card details <br> For la sani Grill <br> Taste that makes the difference
+    </p>
 </body>
+</html>
