--- a/gitPractice.html
+++ b/gitPractice.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <p> 
-        Loyality Card details <br> For la sani Grill <br> Taste that makes the difference
+        Loyality Card details <br> For la sani Grill <br> Taste that makes the difference <br>
+        version 3
     </p>
 </body>
 </html>
