--- a/gitPractice.html
+++ b/gitPractice.html
@@ -8,7 +8,7 @@
 <body>
     <p> 
         Loyality Card details <br> For la sani Grill <br> Taste that makes the difference <br>
-        version 3
+        version 3 updated
     </p>
 </body>
 </html>
